--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "1d682b5f-9782-4fa7-9c68-0ab99c21fdc6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "dacc6b0e-8754-4a9e-abd8-37583baf7450",
    "metadata": {},
    "outputs": [],
@@ -696,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9d4a6674-f56c-4338-986a-7ed11cb72206",
    "metadata": {},
    "outputs": [],
@@ -973,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f3bd1ce5-bda9-4184-9bd2-b034fc2db751",
    "metadata": {},
    "outputs": [],
@@ -998,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "de6dbc43-8ba4-4a25-bf90-a4eb045d4f36",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "a00f4568-211d-4f28-bc19-079f29d7165c",
    "metadata": {},
    "outputs": [],
@@ -1037,18 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4683967d-6e36-4065-849b-caf92573cd3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate a LinearRegression model\n",
-    "model_lr = LinearRegression()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "e99b536a-dd68-42ee-b822-0073ed367f97",
    "metadata": {},
    "outputs": [
@@ -1056,13 +1046,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.38\n",
-      "\n",
-      "\n"
+      "RMSE: 0.62\n",
+      "CPU times: total: 46.9 ms\n",
+      "Wall time: 36 ms\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
+    "# Instantiate a LinearRegression model\n",
+    "model_lr = LinearRegression()\n",
+    "\n",
     "# Fit logreg to the train set\n",
     "model_lr.fit(X_train, y_train)\n",
     "\n",
@@ -1070,10 +1065,53 @@
     "y_pred_lr = model_lr.predict(X_test)\n",
     "\n",
     "# Compute RMSE metric\n",
-    "rmse_lr = round(mean_squared_error(y_test, y_pred_lr), 2)\n",
+    "rmse_lr = round(mean_squared_error(y_test, y_pred_lr) ** 0.5, 2)\n",
     "\n",
-    "print('RMSE: {}'.format(rmse_lr))\n",
-    "print('\\n')"
+    "print('RMSE: {}'.format(rmse_lr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "887fbb43-12b6-41dc-8390-31612ebdb696",
+   "metadata": {},
+   "source": [
+    "## Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "383407b1-014d-4f8d-9798-7995da200198",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.28\n",
+      "CPU times: total: 11.3 s\n",
+      "Wall time: 11.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Instantiate rf\n",
+    "model_rf = RandomForestRegressor(n_estimators=25,\n",
+    "                                 random_state=42)\n",
+    "            \n",
+    "# Fit rf to the training set    \n",
+    "model_rf.fit(X_train, y_train) \n",
+    "\n",
+    "# Predict the test set labels\n",
+    "y_pred_rf = model_rf.predict(X_test)\n",
+    "\n",
+    "# Evaluate the test set RMSE\n",
+    "rmse_rf = round(mean_squared_error(y_test, y_pred_rf) , 2)\n",
+    "\n",
+    "# Print rmse_test\n",
+    "print('RMSE: {}'.format(rmse_rf))"
    ]
   }
  ],
