--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -862,7 +862,7 @@
    "id": "d736d5ee-532c-4e9c-9c88-f6787ac472d7",
    "metadata": {},
    "source": [
-    "### Correlation matrix"
+    "## Correlation matrix"
    ]
   },
   {
@@ -930,7 +930,7 @@
     "tags": []
    },
    "source": [
-    "### Checking for outliers"
+    "## Checking for outliers"
    ]
   },
   {
@@ -971,7 +971,7 @@
    "id": "c55aa09a-74d2-4e8d-bead-00d1fa077f36",
    "metadata": {},
    "source": [
-    "## Preprocessing data before modeling"
+    "# Preprocessing data before modeling"
    ]
   },
   {
@@ -1010,7 +1010,7 @@
    "id": "0bde77a3-34f3-4c39-b902-94641b7fefb4",
    "metadata": {},
    "source": [
-    "### Splitting data between train and test set"
+    "## Splitting data between train and test set"
    ]
   },
   {
@@ -1041,7 +1041,7 @@
    "id": "a3cd6f67-1553-4507-ba92-24a5fab7d837",
    "metadata": {},
    "source": [
-    "## Model Training\n"
+    "# Model Training"
    ]
   },
   {
@@ -1049,7 +1049,7 @@
    "id": "168ab2d2-1c8b-4880-896c-b063f00986ab",
    "metadata": {},
    "source": [
-    "### Logistic Regression"
+    "## Logistic Regression"
    ]
   },
   {
@@ -1091,7 +1091,7 @@
    "id": "887fbb43-12b6-41dc-8390-31612ebdb696",
    "metadata": {},
    "source": [
-    "### Random Forest Regressor"
+    "## Random Forest Regressor"
    ]
   },
   {
