--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
    "id": "a2e74478-4493-48e5-a96d-91fd40bacb0b",
    "metadata": {},
    "outputs": [
@@ -1171,6 +1171,50 @@
     "           rotation=45)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "39820662-f91c-4aab-ab15-accc3cd0c409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import DecisionTreeClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# Import AdaBoostClassifier\n",
+    "from sklearn.ensemble import AdaBoostRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "a3d421a0-fd7f-416e-9e72-898e9ffd67a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.69\n",
+      "CPU times: total: 12.9 s\n",
+      "Wall time: 13 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "adaboost_regressor = AdaBoostRegressor(n_estimators=200, learning_rate = 0.001, loss='exponential')\n",
+    "model_ada = adaboost_regressor.fit(X_train, y_train)\n",
+    "y_pred_ada = model_ada.predict(X_test)\n",
+    "\n",
+    "# Evaluate the test set RMSE\n",
+    "rmse_ada = round(mean_squared_error(y_test, y_pred_ada) ** 0.5, 2)\n",
+    "\n",
+    "# Print rmse_test\n",
+    "print('RMSE: {}'.format(rmse_ada))"
    ]
   }
  ],
