--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -1015,7 +1015,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 145,
+   "id": "f32fb383-68fc-4e0b-b575-8e88a8cca609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining a seed\n",
+    "seed = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "id": "de6dbc43-8ba4-4a25-bf90-a4eb045d4f36",
    "metadata": {},
    "outputs": [],
@@ -1027,13 +1038,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 147,
    "id": "a00f4568-211d-4f28-bc19-079f29d7165c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting train dataset into train and test\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=seed)"
    ]
   },
   {
@@ -1042,17 +1053,6 @@
    "metadata": {},
    "source": [
     "# Model Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "id": "f32fb383-68fc-4e0b-b575-8e88a8cca609",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining a seed\n",
-    "seed = 42"
    ]
   },
   {
