--- a/notebooks/wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/wild_blueberry_yield_prediction.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "dc0acbae-f7a1-4194-ad40-c0831edaab47",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "1283f392-0576-45fb-b9b9-956285315793",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "4dc95bbd-c2a4-49f2-8383-4779c71bd9f6",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "4656e8c9-32b2-4d65-a56f-83c8b839101f",
    "metadata": {},
    "outputs": [
@@ -630,8 +630,7 @@
    "id": "b6c0bb6c-9f11-4b90-8056-2c8e98156286",
    "metadata": {},
    "source": [
-    "## Features distribution train KDEs\n",
-    "\n"
+    "## Features distribution train vs validation set KDEs"
    ]
   },
   {
@@ -1010,12 +1009,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eab62877-18be-4fa0-a0da-f3a7c3d0cadc",
+   "metadata": {},
+   "source": [
+    "# Preprocessing data before modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ca3e6a-74c0-4d15-bffb-2419ec6750b7",
+   "metadata": {},
+   "source": [
+    "## Get the datasets model-ready"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4abb78e7-4302-4ac5-ab12-55dc63cb5a5b",
+   "execution_count": 42,
+   "id": "231007c7-849e-4eb9-b2df-9735dbf46712",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute_engineered_features(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Create engineered features to have the dataset model-ready\n",
+    "    \n",
+    "    Args:\n",
+    "        data Pandas.DataFrame input\n",
+    "    \n",
+    "    Returns:\n",
+    "        data Pandas.DataFrame with engineered features\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Drop outlisers in 'honeybee'\n",
+    "    data = data[data['honeybee'] < 5]\n",
+    "    \n",
+    "    # Create a feature clonesize per honeybee\n",
+    "    data['clonesize per honeybee'] = data['clonesize'] * data['honeybee']\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "90818ef9-416a-4e7f-a8b0-cb6085e4bb26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the train data model-ready\n",
+    "df = compute_engineered_features(df.copy())\n",
+    "\n",
+    "# get the validation data model-ready\n",
+    "df_validation = compute_engineered_features(df_validation.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fb2f4f-eb5f-49f7-a318-0b73fa8835d8",
+   "metadata": {},
+   "source": [
+    "## Defining features and label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2750f8bb-25d6-49db-a4ce-55b93fdd8823",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'clonesize', 'honeybee', 'bumbles', 'andrena', 'osmia',\n",
+       "       'MaxOfUpperTRange', 'MinOfUpperTRange', 'AverageOfUpperTRange',\n",
+       "       'MaxOfLowerTRange', 'MinOfLowerTRange', 'AverageOfLowerTRange',\n",
+       "       'RainingDays', 'AverageRainingDays', 'fruitset', 'fruitmass', 'seeds',\n",
+       "       'yield', 'clonesize per honeybee'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e8dfab-5491-4a87-ad4f-e3f382706b22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['id', \n",
+    "            'clonesize', 'honeybee', 'bumbles', 'andrena', 'osmia', 'MaxOfUpperTRange', 'MinOfUpperTRange', 'AverageOfUpperTRange', 'MaxOfLowerTRange', 'MinOfLowerTRange', 'AverageOfLowerTRange', 'RainingDays', 'AverageRainingDays', 'fruitset', 'fruitmass', 'seeds',\n",
+    "       'yield', 'clonesize per honeybee']"
+   ]
   }
  ],
  "metadata": {
