Updated california housing challenge

--- a/notebooks/wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/wild_blueberry_yield_prediction.ipynb
@@ -1444,7 +1444,7 @@
    "id": "df782a82-b131-4513-9866-7c2c78e5c0fc",
    "metadata": {},
    "source": [
-    "## Logistic Regression"
+    "## Linear Regression"
    ]
   },
   {
