--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -1061,7 +1061,7 @@
    "id": "168ab2d2-1c8b-4880-896c-b063f00986ab",
    "metadata": {},
    "source": [
-    "## Logistic Regression"
+    "## Lin Regression"
    ]
   },
   {
