--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 170,
    "id": "f32fb383-68fc-4e0b-b575-8e88a8cca609",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1061,7 @@
    "id": "168ab2d2-1c8b-4880-896c-b063f00986ab",
    "metadata": {},
    "source": [
-    "## Lin Regression"
+    "## Linear Regression"
    ]
   },
   {
