--- a/notebooks/california_housing_challenge.ipynb
+++ b/notebooks/california_housing_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 173,
    "id": "1d682b5f-9782-4fa7-9c68-0ab99c21fdc6",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 174,
    "id": "e4000715-de8b-4dd8-b99c-c1244cdd3cc3",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 175,
    "id": "dacc6b0e-8754-4a9e-abd8-37583baf7450",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 176,
    "id": "9d4a6674-f56c-4338-986a-7ed11cb72206",
    "metadata": {},
    "outputs": [],
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 177,
    "id": "baf6cf7d-bb06-4051-b605-27351c8eb5a4",
    "metadata": {},
    "outputs": [],
@@ -987,23 +987,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6366126-9147-4cb3-9fa6-456804681f9a",
+   "metadata": {},
+   "source": [
+    "### Define features and label"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 179,
+   "id": "d03876fe-c2a5-4e37-ae10-29cdb5e9e437",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['MedInc', 'HouseAge', 'AveRooms', 'AveBedrms', 'Population', 'AveOccup',\n",
+       "       'Latitude', 'Longitude', 'MedHouseVal'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "378d9996-558d-4ae2-8e51-07d5f581a9ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['MedInc', \n",
+    "            'HouseAge', \n",
+    "            'AveRooms', \n",
+    "            'AveBedrms', \n",
+    "            'Population', \n",
+    "            'AveOccup',\n",
+    "            'Latitude', \n",
+    "            'Longitude']\n",
+    "\n",
+    "label = ['MedHouseVal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
    "id": "f3bd1ce5-bda9-4184-9bd2-b034fc2db751",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Saling data with StandardScaler\n",
+    "# Scaling train data with StandardScaler\n",
     "scaler = StandardScaler(copy=True,\n",
     "                        with_mean=True,\n",
     "                        with_std=True)\n",
     "\n",
-    "scaler.fit(df_train)\n",
+    "scaler.fit(df_train[features])\n",
     "\n",
-    "df_train_scaled = pd.DataFrame(scaler.transform(df_train))\n",
+    "df_train_scaled = pd.DataFrame(scaler.transform(df_train[features]))\n",
     "\n",
     "# Scaling removed column names - put them back\n",
-    "df_train_scaled.columns = df_train.columns"
+    "df_train_scaled.columns = features"
    ]
   },
   {
@@ -1016,13 +1066,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 183,
    "id": "f32fb383-68fc-4e0b-b575-8e88a8cca609",
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining a seed\n",
-    "seed = 42"
+    "seed = 108"
    ]
   },
   {
@@ -1033,8 +1083,11 @@
    "outputs": [],
    "source": [
     "# Define X and y for the training set\n",
-    "X = df_train_scaled.iloc[:, :-1]\n",
-    "y = df_train_scaled.iloc[:, -1]"
+    "X = df_train_scaled\n",
+    "y = df_train.iloc[:, -2]\n",
+    "\n",
+    "# Splitting train dataset into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=seed)"
    ]
   },
   {
