--- a/notebooks/wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/wild_blueberry_yield_prediction.ipynb
@@ -25,6 +25,7 @@
     "- AverageOfLowerTRange ℃ The average of the lower band daily air temperature\n",
     "- RainingDays Day The total number of days during the bloom season, each of which has precipitation larger than zero\n",
     "- AverageRainingDays Day The average of raining days of the entire bloom season\n",
+    "- 'fruitset', 'fruitmass', 'seeds' **non** defined\n",
     "\n",
     "Resources:\n",
     "- [Kaggle challenge](https://www.kaggle.com/competitions/playground-series-s3e14/overview)"
