--- a/notebooks/wild_blueberry_yield_prediction.ipynb
+++ b/notebooks/wild_blueberry_yield_prediction.ipynb
@@ -1842,7 +1842,29 @@
    "id": "b11c4e4d-3d79-490c-9311-cfbe4d0cf021",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_sizes, train_scores, test_scores = learning_curve(\n",
+    "    model_gb, X_train, y_train, cv=5, n_jobs=-1, train_sizes=np.linspace(0.1, 1.0, 10), scoring='neg_mean_squared_error')\n",
+    "\n",
+    "train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "train_scores_std = np.std(train_scores, axis=1)\n",
+    "test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "test_scores_std = np.std(test_scores, axis=1)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.title(\"Learning Curve\")\n",
+    "plt.xlabel(\"Training Examples\")\n",
+    "plt.ylabel(\"Score\")\n",
+    "plt.grid()\n",
+    "plt.fill_between(train_sizes, train_scores_mean - train_scores_std,\n",
+    "                 train_scores_mean + train_scores_std, alpha=0.1, color=\"r\")\n",
+    "plt.fill_between(train_sizes, test_scores_mean - test_scores_std,\n",
+    "                 test_scores_mean + test_scores_std, alpha=0.1, color=\"g\")\n",
+    "plt.plot(train_sizes, train_scores_mean, 'o-', color=\"r\", label=\"Training Score\")\n",
+    "plt.plot(train_sizes, test_scores_mean, 'o-', color=\"g\", label=\"Cross-validation Score\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
