--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -637,13 +637,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cf24f65-609d-4b98-9d7b-67525e39578a",
+   "metadata": {},
+   "source": [
+    "## Create train and test set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36a88994-5e05-4e12-ac99-e6c29f76ec1c",
+   "execution_count": 36,
+   "id": "268d21a8-181f-4553-b118-df3e485f488e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## "
+    "train_data = data.dropna(subset=['x_e_out [-]'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "91f726c2-9bcb-4e12-94ff-ad7c70fed0fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = data[data['x_e_out [-]'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "866b1212-8669-4546-a370-84a0510f8b0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 10415 entries, 4 to 31642\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   id                   10415 non-null  int64  \n",
+      " 1   author               8794 non-null   object \n",
+      " 2   geometry             8628 non-null   object \n",
+      " 3   pressure [MPa]       8949 non-null   float64\n",
+      " 4   mass_flux [kg/m2-s]  8851 non-null   float64\n",
+      " 5   x_e_out [-]          0 non-null      float64\n",
+      " 6   D_e [mm]             8568 non-null   float64\n",
+      " 7   D_h [mm]             8953 non-null   float64\n",
+      " 8   length [mm]          8813 non-null   float64\n",
+      " 9   chf_exp [MW/m2]      10415 non-null  float64\n",
+      "dtypes: float64(7), int64(1), object(2)\n",
+      "memory usage: 895.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data.info()"
    ]
   },
   {
