--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "268d21a8-181f-4553-b118-df3e485f488e",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
+   "id": "42f9d5d5-81f6-4e5b-b89c-28275792f2b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 21229 entries, 0 to 31643\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   id                   21229 non-null  int64  \n",
+      " 1   author               17826 non-null  object \n",
+      " 2   geometry             17516 non-null  object \n",
+      " 3   pressure [MPa]       18243 non-null  float64\n",
+      " 4   mass_flux [kg/m2-s]  18002 non-null  float64\n",
+      " 5   x_e_out [-]          21229 non-null  float64\n",
+      " 6   D_e [mm]             17588 non-null  float64\n",
+      " 7   D_h [mm]             18102 non-null  float64\n",
+      " 8   length [mm]          18072 non-null  float64\n",
+      " 9   chf_exp [MW/m2]      21229 non-null  float64\n",
+      "dtypes: float64(7), int64(1), object(2)\n",
+      "memory usage: 1.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "91f726c2-9bcb-4e12-94ff-ad7c70fed0fd",
    "metadata": {},
    "outputs": [],
@@ -666,8 +700,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "id": "866b1212-8669-4546-a370-84a0510f8b0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = test_data.drop('x_e_out [-]', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "860e9833-7ec0-4531-9862-0213a858a543",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +720,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 10415 entries, 4 to 31642\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
       " 0   id                   10415 non-null  int64  \n",
@@ -684,13 +728,12 @@
       " 2   geometry             8628 non-null   object \n",
       " 3   pressure [MPa]       8949 non-null   float64\n",
       " 4   mass_flux [kg/m2-s]  8851 non-null   float64\n",
-      " 5   x_e_out [-]          0 non-null      float64\n",
-      " 6   D_e [mm]             8568 non-null   float64\n",
-      " 7   D_h [mm]             8953 non-null   float64\n",
-      " 8   length [mm]          8813 non-null   float64\n",
-      " 9   chf_exp [MW/m2]      10415 non-null  float64\n",
-      "dtypes: float64(7), int64(1), object(2)\n",
-      "memory usage: 895.0+ KB\n"
+      " 5   D_e [mm]             8568 non-null   float64\n",
+      " 6   D_h [mm]             8953 non-null   float64\n",
+      " 7   length [mm]          8813 non-null   float64\n",
+      " 8   chf_exp [MW/m2]      10415 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(2)\n",
+      "memory usage: 813.7+ KB\n"
      ]
     }
    ],
