--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "b1612058-913b-4c98-971a-604661583a1e",
    "metadata": {},
    "outputs": [
@@ -876,6 +876,7 @@
     "    sns.kdeplot(data=test_data,\n",
     "                x=col_name,\n",
     "                hue='geometry',\n",
+    "                warn_singular=False,\n",
     "                fill=True,\n",
     "                ax=ax[index])\n",
     "   \n",
