--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -1093,8 +1093,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "a124c265-ac27-4431-9edb-c1637efc7509",
+   "execution_count": 86,
+   "id": "c4c9bff7-48ba-4317-964f-c8ef38803746",
    "metadata": {},
    "outputs": [
     {
@@ -1112,73 +1112,7 @@
     "fig, ax = plt.subplots(1, 3, figsize=(21, 7))\n",
     "ax = ax.flatten()\n",
     "\n",
-    "# Generate correlation heatmap train set\n",
-    "sns.heatmap(correlation_train, \n",
-    "            mask=correlation_mask_train, \n",
-    "            cmap='vlag',\n",
-    "            vmax=1.0, \n",
-    "            vmin=-1.0, \n",
-    "            center=0, \n",
-    "            square=True, \n",
-    "            linewidths=.5, \n",
-    "            annot=True,\n",
-    "            annot_kws={'fontsize': 8},\n",
-    "            cbar_kws={\"shrink\":.8, 'orientation':'vertical'},\n",
-    "            ax=ax[0])\n",
-    "\n",
-    "# Generate correlation heatmap original set\n",
-    "sns.heatmap(correlation_orig, \n",
-    "            mask=correlation_mask_orig, \n",
-    "            cmap='vlag',\n",
-    "            vmax=1.0, \n",
-    "            vmin=-1.0, \n",
-    "            center=0, \n",
-    "            square=True, \n",
-    "            linewidths=.5, \n",
-    "            annot=True,\n",
-    "            annot_kws={'fontsize': 8},\n",
-    "            cbar_kws={\"shrink\":.8, 'orientation':'vertical'},\n",
-    "            ax=ax[1])\n",
-    "\n",
-    "# Generate correlation heatmap test set\n",
-    "sns.heatmap(correlation_test, \n",
-    "            mask=correlation_mask_test, \n",
-    "            cmap='vlag',\n",
-    "            vmax=1.0, \n",
-    "            vmin=-1.0, \n",
-    "            center=0, \n",
-    "            square=True, \n",
-    "            linewidths=.5, \n",
-    "            annot=True,\n",
-    "            annot_kws={'fontsize': 8},\n",
-    "            cbar_kws={\"shrink\":.8, 'orientation':'vertical'},\n",
-    "            ax=ax[2])\n",
-    "\n",
-    "ax[0].set_title('Train Set Correlation Heatmap')\n",
-    "ax[1].set_title('Original Set Correlation Heatmap')\n",
-    "ax[2].set_title('Test Set Correlation Heatmap')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "c4c9bff7-48ba-4317-964f-c8ef38803746",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x400 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "# Define lost to iterate on\n",
     "datasets = [(correlation_train, correlation_mask_train, 'Train Set Correlation Heatmap'),\n",
     "            (correlation_orig, correlation_mask_orig, 'Original Set Correlation Heatmap'),\n",
     "            (correlation_test, correlation_mask_test, 'Test Set Correlation Heatmap')]\n",
