--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -1322,8 +1322,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38870586-749a-4656-b411-fb9f67643296",
+   "metadata": {},
+   "source": [
+    "## ANOVA test on original dataset \n",
+    "\n",
+    "The aim is to investigate the effect of 'geometry' on both featues and label"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 156,
    "id": "9a112aa3-977b-4f18-a339-a5f04d837c40",
    "metadata": {},
    "outputs": [
@@ -1331,23 +1341,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "------\n",
+      "Feature: pressure [MPa]\n",
       "F-statistic: 209.6726838787339\n",
-      "p-value: 7.502800471101501e-83\n"
+      "p-value: 7.502800471101501e-83\n",
+      "------\n",
+      "Feature: mass_flux [kg/m2-s]\n",
+      "F-statistic: 70.19963789844027\n",
+      "p-value: 4.0494525501755815e-30\n",
+      "------\n",
+      "Feature: x_e_out [-]\n",
+      "F-statistic: 73.97494750844729\n",
+      "p-value: 1.217947747799208e-31\n",
+      "------\n",
+      "Feature: D_e [mm]\n",
+      "F-statistic: 19.990077259693255\n",
+      "p-value: 2.5722342082769694e-09\n",
+      "------\n",
+      "Feature: D_h [mm]\n",
+      "F-statistic: 3356.5214097926755\n",
+      "p-value: 0.0\n",
+      "------\n",
+      "Feature: length [mm]\n",
+      "F-statistic: 724.8720267390352\n",
+      "p-value: 1.50740718469071e-233\n",
+      "------\n",
+      "Feature: chf_exp [MW/m2]\n",
+      "F-statistic: 110.8361755769167\n",
+      "p-value: 3.3180319920757e-46\n"
      ]
     }
    ],
    "source": [
-    "# Group the numerical feature values by each category\n",
-    "group1 = orig_data[orig_data['geometry'] == 'tube']['pressure [MPa]']\n",
-    "group2 = orig_data[orig_data['geometry'] == 'plate']['pressure [MPa]']\n",
-    "group3 = orig_data[orig_data['geometry'] == 'annulus']['pressure [MPa]']\n",
+    "# Define the numerical feature column names\n",
+    "num_features = ['pressure [MPa]', 'mass_flux [kg/m2-s]', 'x_e_out [-]', 'D_e [mm]', 'D_h [mm]', 'length [mm]', 'chf_exp [MW/m2]']\n",
     "\n",
-    "# Perform the ANOVA test\n",
-    "f_stat, p_value = f_oneway(group1, group2, group3)\n",
+    "# Iterate over the numerical features\n",
+    "for feature in num_features:\n",
+    "    print(\"------\")\n",
+    "    print(\"Feature:\", feature)\n",
     "\n",
-    "# Print the results\n",
-    "print(\"F-statistic:\", f_stat)\n",
-    "print(\"p-value:\", p_value)"
+    "    # Group the numerical feature values by each category\n",
+    "    groups = []\n",
+    "    for category in orig_data['geometry'].unique():\n",
+    "        group = orig_data[orig_data['geometry'] == category][feature]\n",
+    "        groups.append(group)\n",
+    "\n",
+    "    # Perform the ANOVA test\n",
+    "    f_stat, p_value = f_oneway(*groups)\n",
+    "\n",
+    "    # Print the results\n",
+    "    print(\"F-statistic:\", f_stat)\n",
+    "    print(\"p-value:\", p_value)"
    ]
   }
  ],
